--- a/src/components/pages/Private/SideBar/styles/index.css
+++ b/src/components/pages/Private/SideBar/styles/index.css
@@ -41,10 +41,9 @@ code {
 }
 
 
-.content-page{
+.content-page {
   width: 100%;
-  padding-top: 150px;
-  background: #f8f8fa;
+  background: #F5F5F5;
   min-height: 100vh;
 }
 
@@ -53,7 +52,8 @@ code {
   min-width: 200px;
   display: flex;
   justify-content: center;
-  align-items: center;border-color: #dcdcdc #dcdcdc white;
+  align-items: center;
+  border-color: #dcdcdc #dcdcdc white;
   text-align: center;
   font-size: 1.2rem;
   color: black;
@@ -61,50 +61,50 @@ code {
 }
 
 
-.opcao_autocomplete{
+.opcao_autocomplete {
   padding: 10px 10px 10px 10px;
   background-color: white;
   cursor: pointer;
 
 }
-.opcao_autocomplete:hover{
+
+.opcao_autocomplete:hover {
   background-color: #f2f2f2;
 }
 
-.col-form-label{
+.col-form-label {
   margin-top: 10px;
   font-weight: bold;
   padding-top: calc(0.375rem + 1px);
-    padding-bottom: calc(0.375rem + 1px);
-    margin-bottom: 0;
-    font-size: inherit;
-    line-height: 1.5;
+  padding-bottom: calc(0.375rem + 1px);
+  margin-bottom: 0;
+  font-size: inherit;
+  line-height: 1.5;
 }
 
-.header-title{
+.header-title {
   font-weight: bold;
 }
 
-.map2{
+.map2 {
   position: relative !important;
   height: 100%;
 }
 
-.hr_show{
+.hr_show {
   display: block;
 }
 
 
-@media (max-width:992px){
-  .hr_show{
+@media (max-width:992px) {
+  .hr_show {
     display: none;
   }
 }
 
 
-@media (max-width:576px){
-  .hr_show{
+@media (max-width:576px) {
+  .hr_show {
     display: block;
   }
 }
-
