--- a/src/components/pages/Private/SideBar/styles/App.scss
+++ b/src/components/pages/Private/SideBar/styles/App.scss
@@ -3,12 +3,13 @@
 $sidebar-bg-color: #1d1d1d;
 $submenu-bg-color: rgba(255, 255, 255, 0.05);
 $submenu-bg-color-collapsed: rgba(29, 29, 29, 0.95);
-$sidebar-color: #adadad;
-$highlight-color: #d8d8d8;
+$sidebar-color: #693B9F;
+$highlight-color: #693B9F;
 $icon-bg-color: rgba(255, 255, 255, 0.05);
 $icon-size: 35px;
 
 @import 'react-pro-sidebar/dist/scss/styles.scss';
+
 body {
   margin: 0;
   height: 100vh;
@@ -44,6 +45,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
     .sidebar-btn {
       padding: 1px 15px;
       border-radius: 40px;
@@ -57,10 +59,12 @@ body {
       justify-content: center;
       text-overflow: ellipsis;
       overflow: hidden;
+
       span {
         margin-left: 5px;
         font-size: 13px;
       }
+
       &:hover {
         color: $highlight-color;
       }
@@ -84,9 +88,11 @@ body {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+
     header {
       margin-bottom: 40px;
       border-bottom: 1px solid #efefef;
+
       h1 {
         display: flex;
         align-items: center;
@@ -98,17 +104,21 @@ body {
       margin-top: auto;
       color: #888;
       text-align: center;
+
       a {
         text-decoration: none;
         color: #888;
+
         &:hover {
           text-decoration: underline;
         }
       }
     }
   }
+
   .social-bagdes {
     margin-top: 10px;
+
     img {
       margin: 5px;
     }
@@ -119,7 +129,8 @@ body {
     margin-bottom: 24px;
     font-size: 14px;
     color: #545454;
-    > span {
+
+    >span {
       margin-left: 10px;
     }
   }
@@ -133,13 +144,16 @@ body {
         transform: translateX(20px);
       }
     }
+
     .block {
       direction: rtl;
-      > span {
+
+      >span {
         margin-left: 0;
         margin-right: 10px;
       }
     }
+
     .sidebar-btn-wrapper {
       .sidebar-btn {
         span {
@@ -152,12 +166,14 @@ body {
 
   @media (max-width: 767.98px) {
     overflow-x: hidden;
+
     header {
       h1 {
         font-size: 24px;
       }
     }
   }
+
   @media (max-width: $breakpoint-md) {
     .btn-toggle {
       display: flex;
@@ -176,14 +192,17 @@ body {
   font-size: 9px;
   letter-spacing: 1px;
   border-radius: 15px;
+
   &.red {
     color: #ffffff;
     background: #d63030;
   }
+
   &.gray {
     color: #ffffff;
     background: #777777;
   }
+
   &.yellow {
     color: #000000;
     background: #ffd331;
@@ -197,30 +216,34 @@ body {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .pro-sidebar-layout {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
-.pro-item-content{
+.pro-item-content {
   user-select: none;
 }
 
-.custom_scrollbar{
+.custom_scrollbar {
   overflow-y: hidden;
   overflow-x: scroll;
 }
 
-.custom_scrollbar::-webkit-scrollbar{
+.custom_scrollbar::-webkit-scrollbar {
   height: 6px;
-  
+
 }
 
 .custom_scrollbar::-webkit-scrollbar-button {
   background: #ccc;
 }
+
 .custom_scrollbar::-webkit-scrollbar-track-piece {
   background: #f2f2f2;
 }
+
 .custom_scrollbar::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
