--- a/src/components/pages/Styles/style.css
+++ b/src/components/pages/Styles/style.css
@@ -1,3 +1,9 @@
+.content-page {
+  width: 100%;
+  background: #F5F5F5;
+  min-height: calc(100vh - 64px);
+}
+
 .w-500 {
   max-width: 500px;
 }
@@ -20,9 +26,57 @@
   background-color: #693b9f;
 }
 
+
 .content {
-  min-height: 100vh;
+  max-width: 1000px;
+  margin: auto;
+  padding: 1rem;
+  border-radius: .4rem;
+  background-color: white;
   transition: all 0.3s;
-  background: #f5f5f5;
-  max-width: 1000;
+  opacity: 0;
+  transform: translateX(-20px);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  animation: animeLeft 0.3s forwards;
+}
+
+.brand {
+  opacity: 0;
+  transform: translateX(-20px);
+  width: 100px;
+  height: 58px;
+  border-radius: .4rem;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+  animation: animeLeft 0.3s forwards;
+  margin-left: -5px !important;
+}
+
+.focus {
+  transition: all 5s !important;
+  border-bottom: 1px solid #693B9F !important;
+  border-top: 1px solid #693B9F !important;
+  border-right: 1px solid #693B9F !important;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px !important;
+}
+
+.form-control:focus {
+  border: 1px solid #693B9F !important;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px !important;
+}
+
+.brand img {
+  width: 90%;
+  height: 90%;
+  border-radius: .4rem;
+}
+
+@keyframes animeLeft {
+  to {
+    opacity: initial;
+    transform: initial;
+  }
 }
