--- a/src/components/pages/Styles/style-card.css
+++ b/src/components/pages/Styles/style-card.css
@@ -6,15 +6,14 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, 0) !important;
   -webkit-transition-duration: 0.3s !important;
   transition-duration: 0.3s !important;
-  -webkit-transition-property: box-shadow, transform !important;
-  transition-property: box-shadow, transform !important;
+  -webkit-transition-property: transform !important;
+  transition-property: transform !important;
   cursor: pointer !important;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px !important;
+  /* box-shadow: #693B9F 0px 4px 12px !important !important; */
 }
 
-.hvr:hover,
-.hvr:focus,
-.hvr:active {
-  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5) !important;
+.hvr:hover {
   -webkit-transform: scale(1.1) !important;
   transform: scale(1.1) !important;
 }
