--- a/src/components/pages/Styles/style.css
+++ b/src/components/pages/Styles/style.css
@@ -26,10 +26,15 @@
   background-color: #693b9f;
 }
 
+.product-card {
+  width: 175;
+  height: 275;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 
 .content {
   max-width: 1000px;
-  margin: auto;
+  margin: .4rem;
   padding: 1rem;
   border-radius: .4rem;
   background-color: white;
@@ -38,6 +43,23 @@
   transform: translateX(-20px);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   animation: animeLeft 0.3s forwards;
+}
+
+.content-home,
+.content-purple {
+  padding: 1rem;
+  margin: 8rem 0 8rem 0;
+  background-color: white;
+  transition: all 0.3s;
+  opacity: 0;
+  transform: translateX(-20px);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  animation: animeLeft 0.3s forwards;
+  width: 100%;
+}
+
+.content-purple {
+  background-color: #693B9F !important;
 }
 
 .brand {
@@ -74,9 +96,118 @@
   border-radius: .4rem;
 }
 
+.bg-gray {
+  background-color: #f5f5f5;
+}
+
+.rounded-button {
+  border-radius: 50%;
+  background-color: #693B9F;
+  color: #fff;
+  border: none;
+  height: 2rem;
+  width: 2rem;
+}
+
+.anime-left {
+  opacity: 0;
+  transform: translateX(-20px);
+  transition: all 0.3s;
+  animation: animeLeft 0.3s forwards;
+}
+
+.anime-right {
+  opacity: 0;
+  transform: translateX(20px);
+  transition: all 0.3s;
+  animation: animeLeft 0.3s forwards;
+}
+
 @keyframes animeLeft {
   to {
     opacity: initial;
     transform: initial;
   }
+}
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.hvr-bounce-to-right {
+  display: inline-block !important;
+  vertical-align: middle !important;
+  -webkit-transform: perspective(1px) translateZ(0) !important;
+  transform: perspective(1px) translateZ(0) !important;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0) !important;
+  position: relative !important;
+  -webkit-transition-property: color !important;
+  transition-property: color !important;
+  -webkit-transition-duration: 0.5s !important;
+  transition-duration: 0.5s !important;
+}
+
+.hvr-bounce-to-right:before {
+  content: "" !important;
+  position: absolute !important;
+  z-index: -1 !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  background: #693B9F !important;
+  -webkit-transform: scaleX(0) !important;
+  transform: scaleX(0) !important;
+  -webkit-transform-origin: 0 50% !important;
+  transform-origin: 0 50% !important;
+  -webkit-transition-property: transform !important;
+  transition-property: transform !important;
+  -webkit-transition-duration: 0.5s !important;
+  transition-duration: 0.5s !important;
+  -webkit-transition-timing-function: ease-out !important;
+  transition-timing-function: ease-out !important;
+}
+
+.hvr-bounce-to-right:hover,
+.hvr-bounce-to-right:focus,
+.hvr-bounce-to-right:active {
+  color: white !important;
+}
+
+.hvr-bounce-to-right:hover:before,
+.hvr-bounce-to-right:focus:before,
+.hvr-bounce-to-right:active:before {
+  -webkit-transform: scaleX(1) !important;
+  transform: scaleX(1) !important;
+  -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66) !important;
+  transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66) !important;
+}
+
+.text-gray {
+  color: #707070;
+}
+
+.text-pointer p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
+  cursor: pointer;
 }
