fix: Accordions on payment screen

--- a/src/components/pages/Styles/style.css
+++ b/src/components/pages/Styles/style.css
@@ -57,7 +57,7 @@
 .content {
   max-width: 1000px;
   margin: 1rem calc(1rem + 16px) 1rem 1rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   border-radius: .4rem;
   background-color: white;
   transition: all 0.3s;
