--- a/src/components/pages/Styles/style.css
+++ b/src/components/pages/Styles/style.css
@@ -262,3 +262,16 @@ h6,
 span {
   cursor: pointer;
 }
+
+.comment-input{
+  background-color: #EBEBEB;
+  border-radius: 30px;
+  min-height: 100px;
+  border: none;
+  flex: 1 1 auto
+}
+
+.comment-input:focus{
+  border: none;
+  box-shadow: none;
+}
