--- a/src/components/pages/Dashboard/styles.css
+++ b/src/components/pages/Dashboard/styles.css
@@ -90,19 +90,6 @@
     transform: scale(1.1);
   }
 
-  /* .focus {
-    transition: all 5s !important;
-    border-bottom: 1px solid #693B9F !important;
-    border-top: 1px solid #693B9F !important;
-    border-right: 1px solid #693B9F !important;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px !important;
-  }
-  
-  .form-control:focus {
-    border: 1px solid #693B9F !important;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px !important;
-  } */
-
 /* --------------------------------------------------Card-Styles-------------------------------------------------- */
 .brand {
   opacity: 0;
@@ -148,6 +135,8 @@ h1 {
   font-family: 'Courier New', Courier, monospace;
 }
 
+
+/* --------------------------------------------------Dashboard-Styles-------------------------------------------------- */
 .user-dash{
   height: calc(100vh - 172px);
   border-right: 1px solid #E8E8E8
@@ -179,9 +168,12 @@ h1 {
 }
 
 .user-dash li:hover{
-  color: #FFF;
   transition: all .3s;
-  background-color: #693B9F;
+  cursor: pointer;
+}
+
+.user-dash NavLink{
+  color:#212529
 }
 
 .user-dash li span{
@@ -190,12 +182,3 @@ h1 {
   height: auto;
   display: block;
 }
-
-/* .user-dash a::before{
-  content: '';
-  display: block;
-  width: 80px;
-  height: 2px;
-  background: #FFA235;
-  margin: 0;
-} */
