--- a/src/components/pages/Dashboard/styles.css
+++ b/src/components/pages/Dashboard/styles.css
@@ -162,7 +162,7 @@ h1 {
   background-color: #E8E8E8;
 } 
 
-.user-dash li a{
+.user-dash li p{
   text-decoration: none;
   padding: 1rem 1rem 1rem .3rem;
 }
