refactor: Product screen

--- a/src/components/pages/Styles/style.css
+++ b/src/components/pages/Styles/style.css
@@ -275,3 +275,16 @@ span {
   border: none;
   box-shadow: none;
 }
+
+.close-absolute {
+  border-radius: 50%;
+  background-color: #FF5232;
+  color: #fff;
+  border: none;
+  height: 1.8rem;
+  width: 1.8rem;
+  margin-left: -40px;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+}
