--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Nunito Sans', sans-serif !important;
+  font-size: 16px !important;
+  color: #333 !important;
+  line-height: 1.5 !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.error{
+  color: #DC3545
+}
+
+.title{
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  color: #1c1c1c;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.dash-title{
+  font-size: 25px;
+  font-weight: normal;
+  color: #333;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+/* File drop */
+.file-drop {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  /* box-shadow: 0 0 0 1px rgba(0,0,0,0.05), 2px 2px 3px 1px rgba(208, 213, 219, 0.28); */
+  border-radius: 5px;
+  border: 2px dashed #c4c4c4;
+}
+
+.file-drop>.file-drop-target {
+  /* basic styles */
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+
+  /* horizontally and vertically center all content */
+  display: flex;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+
+  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+
+  align-items: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+
+  justify-content: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+
+  align-content: center;
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+
+  text-align: center;
+}
+
+.file-drop>.file-drop-target.file-drop-dragging-over-frame,
+.file-drop-target.file-drop-dragging-leave-frame {
+  /* overlay a black mask when dragging over the frame */
+  -webkit-transition: 0.25s;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  -ms-transition: 0.25s;
+  transition: 0.25s;
+  box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
+    0 8px 16px -8px rgba(74, 167, 182, 0.3);
+  z-index: 50;
+  opacity: 1;
+}
+
+.file-drop>.file-drop-target.file-drop-dragging-over-target {
+  /* turn stuff orange when we are dragging over the target */
+  /* color: #ff6e40;
+  box-shadow: 0 0 13px 3px #ff6e40; */
+  background-color: #FFFFA3;
+}
+
+.file-rounded {
+  border-radius: 50% !important;
 }
