--- a/src/index.css
+++ b/src/index.css
@@ -18,17 +18,54 @@ code {
   cursor: pointer;
 }
 
-.title{
-  font-size: 48px;
-  font-weight: bold;
-  text-align: center;
-  color: #1c1c1c;
+.title {
+  position: relative;
+  font-size: 36px;
+  font-weight: 300;
   text-transform: uppercase;
   letter-spacing: 2px;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  font-family: 'Montserrat', sans-serif;
+  color: #333;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 10px;
+  z-index: 1;
 }
+
+.title:before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-42%);
+  width: 10px;
+  height: 40px;
+  background-color: #F5C469;
+  z-index: -1;
+  margin-left: -3px;
+}
+
+.main-title {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -1px;
+  /* color: #333; */
+  text-align: center;
+  text-transform: uppercase;
+  /* text-shadow: 1px 1px 0px rgba(255,255,255,0.5); */
+  margin: 0;
+  padding: 30px 0;
+}
+
+.subtitle {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+  /* color: #333; */
+  /* text-align: center; */
+}
+
 
 .dash-title{
   font-size: 25px;
@@ -113,4 +150,117 @@ code {
 
 .file-rounded {
   border-radius: 50% !important;
+}
+
+.cart-button{
+  width: 30px;
+  height: auto;
+  background-color: #693B9F;
+  color: #f1f1f1;
+  border: none;
+  font-weight: bold;
+}
+
+.bold{
+  font-weight: 450;
+}
+
+.slide-in-right {
+  position: relative;
+  left: 100%;
+  animation: slide-in-r 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+  
+  /* Definir a animação */
+@keyframes slide-in-r {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+.slide-in-left {
+  position: relative;
+  right: 0;
+  animation: slide-in-l 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+  
+  /* Definir a animação */
+@keyframes slide-in-l {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+  .remove-button {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+    background-color: hsl(0, 90%, 65%);
+    color: #ff0000;
+    color: white;
+    border: none;
+    /* padding: 5px; */
+    border-radius: 100%;
+    cursor: pointer;
+    width: 28px;
+    height: 28px;
+  }
+
+  /* Estilo para o modal */
+.modal {
+  display: flex;
+  position: fixed;
+  right: 0;
+  top: 0;
+  max-width: 100%;
+  height: 100%;
+  justify-content: end;
+}
+
+/* Estilo para o conteúdo do modal */
+.modal-content {
+  max-width: 550px;
+  border: none;
+  border-radius: 0;
+  background-color: white;
+  padding: 20px;
+  height: 100%;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  border-radius: 30px;
+  overflow: hidden;
+  flex-grow: 1;
+  width: 400px;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.search-container:focus{
+  outline: none;
+  background-color: #f5f5f5;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.w-principal{
+  max-width: 1400px;
+}
+
+.category{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background-color: #F5C469;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
