--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,23 @@ code {
     monospace;
 }
 
+.price {
+  font-size: 24px; /* tamanho da fonte */
+  font-weight: bold; /* peso da fonte */
+  color: #f00; /* cor do texto, vermelho neste caso */
+  /* text-decoration: line-through; */
+  font-size: 2rem; /* tamanho da fonte */
+  letter-spacing: 2px; /* espaçamento entre letras */
+  color: #333; /* cor do texto, cinza neste caso */
+  line-height: 1.5; /* altura da linha */
+}
+
+.price-sale {
+  font-size: 32px; /* tamanho da fonte */
+  font-weight: bold; /* peso da fonte */
+  color: #008000; /* cor do texto, verde neste caso */
+}
+
 .error{
   color: #DC3545
 }
@@ -25,6 +42,18 @@ code {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 0 10px 2px rgba(255, 255, 255, 0.5);
+}
+
+.product-title{
+  font-size: 36px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  color: #333;
+}
+
+.product-subtitle{
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.60);
 }
 
 .title {
