--- a/src/index.css
+++ b/src/index.css
@@ -11,21 +11,26 @@ code {
 }
 
 .price {
-  font-weight: bold; /* peso da fonte */
-  /* text-decoration: line-through; */
-  font-size: 2.5rem; /* tamanho da fonte */
-  color: #333; /* cor do texto, cinza neste caso */
-  line-height: 1.5; /* altura da linha */
+  font-weight: bold;
+  font-size: 2.5rem;
+  color: #333;
+  line-height: 1.5;
 }
 
-.price-sale {
-  font-size: 32px; /* tamanho da fonte */
-  font-weight: bold; /* peso da fonte */
-  color: #008000; /* cor do texto, verde neste caso */
+.no-discount {
+  font-size: 1.5rem;
+  color: #333;
+  line-height: 1.5;
+}
+
+.countdown{
+  font-size: 2rem;
+  color: #DC3545 ;
+  line-height: 1.5;
 }
 
 .error{
-  color: #DC3545
+  color: #DC3545 !important;
 }
 
 .success{
@@ -317,7 +322,7 @@ code {
 }
 
 .input-group-with-icon input[type="text"] {
-  padding-right: 40px; /* ajusta o espaço do input para que o ícone tenha espaço */
+  /* padding-right: 40px;*/
   height: 45px;
 }
 
@@ -367,3 +372,102 @@ code {
 .rounded-active:hover{
   background: #F5C469;
 }
+
+.bg-gray{
+  background-color:#F5F5F5;
+}
+
+.bg-gradient{
+  background: linear-gradient(to bottom, #693B9F, #8C4EBE, #693B9F) !important;
+}
+
+/* estilo do input */
+.input-container {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.input-container label {
+  position: absolute;
+  top: 0;
+  transform: translateY(0%);
+  margin: .5rem .5rem .5rem .8rem;
+  font-size: 0.8rem;
+  color: #777;
+  pointer-events: none;
+  transition: all 0.2s ease-out;
+}
+
+.input-container input {
+  display: block;
+  width: 100%;
+  padding: 1.5rem 1rem 1rem 1rem;
+  font-size: 1rem;
+  border-radius: 2rem;
+  border: none;
+  outline: none;
+  background-color: #f5f5f5;
+}
+
+.input-container input:focus {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+.input-container {
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.icon-button {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-right: 40px;
+  transform: translate(50%, -50%);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.input-error {
+  outline: 1px solid #DC3545 !important;
+}
+
+.form-check-input[type=checkbox]:checked {
+  background-color: #693B9F !important;
+  border-color: #693B9F !important;
+}
+
+.form-check-input[type=checkbox]:focus {
+  border-color: #693B9F !important;
+  outline: 0 !important;
+  box-shadow: none !important;
+}
+
+.footer-img{
+  width: 50px;
+  height: 100%;
+  margin: 5px;
+}
+
+.footer ul li{
+text-decoration: none;
+color: #693B9F;
+margin: none;
+}
+
+.comment-input{
+  border: none;
+  background-color: #E9E9E9;
+  border-radius: 0;
+  outline: 0;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.60);
+  width: 100%;
+}
+
+.secondary{
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.60);
+}
+
