--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ code {
     monospace;
 }
 
+p{
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.60);
+}
+
 .price {
   font-weight: bold;
   font-size: 2.5rem;
