--- a/src/components/pages/Dashboard/styles.css
+++ b/src/components/pages/Dashboard/styles.css
@@ -198,11 +198,10 @@ h4,
 h3,
 h2,
 h1 {
-  font-weight: bold;
+  font-weight: 500;
   color: #212529;
   padding: 0 !important;
   margin-bottom: 0 !important;
-  font-family: 'Courier New', Courier, monospace;
 }
 
 
