--- a/src/index.css
+++ b/src/index.css
@@ -292,6 +292,7 @@ p{
   background-color: white;
   padding: 20px;
   height: 100%;
+  overflow-y: auto;
 }
 
 .search-container {
@@ -495,4 +496,17 @@ margin: none;
 .dropdown-active:active{
   background-color: #693B9F !important;
 }
+
+.alert-box {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+}
+
 
