--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
 
 p{
   font-size: 16px;
-  color: rgba(0, 0, 0, 0.60);
+  color: rgba(0, 0, 0, 0.75);
   margin: 0;
 }
 
@@ -223,6 +223,10 @@ p{
 
 .bold{
   font-weight: 450;
+}
+
+.bolder{
+  font-weight: 600;
 }
 
 .slide-in-right {
