--- a/src/index.css
+++ b/src/index.css
@@ -566,7 +566,7 @@ margin: none;
   left: 0;
   height: 100%;
   width: 100%;
-  border-radius: 50%;
+  border-radius: 5px;
 
   /* horizontally and vertically center all content */
   display: flex;
@@ -607,19 +607,13 @@ margin: none;
   transition: 0.25s;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(74, 167, 182, 0.3);
-  z-index: 50;
+  /* z-index: 50; */
   opacity: 1;
 }
 
 .file-drop>.file-drop-target.file-drop-dragging-over-target {
-  /* turn stuff orange when we are dragging over the target */
-  /* color: #ff6e40;
-  box-shadow: 0 0 13px 3px #ff6e40; */
   background-color: #FFFFA3;
-}
-
-.file-rounded {
-  border-radius: 50% !important;
+  border-radius: 5px !important;
 }
 
 
