--- a/src/components/Pages/Accordion/styles.css
+++ b/src/components/Pages/Accordion/styles.css
@@ -1,3 +1,12 @@
+.hidden {
+  transform: translateX(-100%);
+  transition: all .5s ease;
+}
+
+.shadow{
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
 .accordion ul {
  list-style: none;
  margin: 0;
