--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,17 @@ p{
   margin: 0;
 }
 
+.navbar-toggler{
+  border: none !important;
+  box-shadow: none !important;
+  outline: none !important;
+}
+
+.row{
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
 .carousel{
   text-align: center;
 }
@@ -195,77 +206,6 @@ p{
   letter-spacing: 1px;
 }
 
-/* File drop */
-.file-drop {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  background-color: #f1f1f1;
-  cursor: pointer;
-  /* box-shadow: 0 0 0 1px rgba(0,0,0,0.05), 2px 2px 3px 1px rgba(208, 213, 219, 0.28); */
-  border-radius: 5px;
-  border: 2px dashed #c4c4c4;
-}
-
-.file-drop>.file-drop-target {
-  /* basic styles */
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  border-radius: 50%;
-
-  /* horizontally and vertically center all content */
-  display: flex;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-
-  flex-direction: column;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-
-  align-items: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-
-  justify-content: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-
-  align-content: center;
-  -webkit-align-content: center;
-  -ms-flex-line-pack: center;
-
-  text-align: center;
-}
-
-.file-drop>.file-drop-target.file-drop-dragging-over-frame,
-.file-drop-target.file-drop-dragging-leave-frame {
-  /* overlay a black mask when dragging over the frame */
-  -webkit-transition: 0.25s;
-  -moz-transition: 0.25s;
-  -o-transition: 0.25s;
-  -ms-transition: 0.25s;
-  transition: 0.25s;
-  box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
-    0 8px 16px -8px rgba(74, 167, 182, 0.3);
-  z-index: 50;
-  opacity: 1;
-}
-
-.file-drop>.file-drop-target.file-drop-dragging-over-target {
-  /* turn stuff orange when we are dragging over the target */
-  /* color: #ff6e40;
-  box-shadow: 0 0 13px 3px #ff6e40; */
-  background-color: #FFFFA3;
-}
-
 .file-rounded {
   border-radius: 50% !important;
 }
@@ -289,14 +229,14 @@ p{
 
 .slide-in-right {
   position: relative;
-  left: 100%;
-  animation: slide-in-r 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  right: 0;
+  animation: slide-in-r 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
   
   /* Definir a animação */
 @keyframes slide-in-r {
   from {
-    transform: translateX(100%);
+    transform: translateX(-100%);
   }
   to {
     transform: translateX(0%);
@@ -306,7 +246,7 @@ p{
 .slide-in-left {
   position: relative;
   right: 0;
-  animation: slide-in-l 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  animation: slide-in-l 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
   
   /* Definir a animação */
@@ -357,6 +297,17 @@ p{
   overflow-y: auto;
 }
 
+.modal-dashboard-content {
+  max-width: 550px;
+  width: 90%;
+  border: none;
+  border-radius: 0;
+  background-color: white;
+  padding: 20px;
+  height: 100%;
+  overflow-y: auto;
+}
+
 .search-container {
   display: flex;
   align-items: center;
@@ -364,6 +315,7 @@ p{
   border-radius: 30px;
   overflow: hidden;
   flex-grow: 1;
+  max-width: 400px;
   width: 400px;
   border: none;
   padding: 10px;
@@ -374,6 +326,18 @@ p{
   outline: none;
   background-color: #f5f5f5;
   box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+@media screen and (max-width: 767px) {
+  .search-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  h1{
+    font-size: 1.2rem !important;
+  }
 }
 
 .w-principal{
@@ -421,6 +385,10 @@ p{
 
 .bg-gray{
   background-color:#F5F5F5;
+}
+
+.bg-yellow{
+  background-color:#F5C469;
 }
 
 .error-message {
@@ -617,15 +585,32 @@ margin: none;
   background-color: #D3D3D3;
  }
 
+ .other-images{
+  width: 223px;
+  height: 223px;
+}
+
  .file-drop {
   position: relative;
-  height: 100%;
-  width: 100%;
+  height: 450px;
+  width: 450px;
   background-color: #f1f1f1;
   cursor: pointer;
   /* box-shadow: 0 0 0 1px rgba(0,0,0,0.05), 2px 2px 3px 1px rgba(208, 213, 219, 0.28); */
   border-radius: 5px;
   border: 2px dashed #c4c4c4;
+}
+
+@media screen and (max-width: 575px){
+  .file-drop {
+    height: 290px;
+    width: 290px;
+  }
+
+  .other-images{
+    width: 143px;
+    height: 143px;
+  }
 }
 
 .file-drop>.file-drop-target {
